@startuml
hide empty members

package ska_tmc_cdm.messages.subarray_node.configure as base {
	package core.py as core <<Rectangle>> {
		class PointingConfiguration
		class DishConfiguration
	}

	package csp.py as csp <<Rectangle>> {
		class CSPConfiguration
	}

	package sdp.py as sdp <<Rectangle>> {
		class SDPConfiguration
	}

    package receptorgroup.py as receptorgroup <<Rectangle>> {
        class ReceptorGroup
    }

    package mccs.py as mccs <<Rectangle>> {
        class MCCSConfiguration
    }

	package tmc.py as tmc <<Rectangle>> {
		class TMCConfiguration
	}

	package ~__init__.py as init <<Rectangle>> {
		class ConfigureRequest {
            interface: str
			transaction_id
			scan_id : int
		}
		ConfigureRequest *-- PointingConfiguration
		ConfigureRequest *-- DishConfiguration
		ConfigureRequest *-- CSPConfiguration
		ConfigureRequest *-- SDPConfiguration
		ConfigureRequest *-- MCCSConfiguration
        ConfigureRequest *-- TMCConfiguration

		note top of ConfigureRequest
			This ""Request"" class forms the
			input argument for
			""SubArrayNode.Configure()"".
		end note
	}

	note as N1
		The response from
		""SubArrayNode.Configure()""
		is unstructured, hence there
		is no Response class in this
		package.
	end note

    PointingConfiguration *-- ReceptorGroup
}

@enduml
